# internal/controller/statistics_ctr/statistics.go
@@ -1,0 +1,25 @@
+package statistics_ctr
+
+import (
+	"context"
+
+	api "github.com/scriptscat/scriptlist/internal/api/statistics"
+	"github.com/scriptscat/scriptlist/internal/service/statistics_svc"
+)
+
+type Statistics struct {
+}
+
+func NewStatistics() *Statistics {
+	return &Statistics{}
+}
+
+// Script 脚本统计数据
+func (s *Statistics) Script(ctx context.Context, req *api.ScriptRequest) (*api.ScriptResponse, error) {
+	return statistics_svc.Statistics().Script(ctx, req)
+}
+
+// ScriptRealtime 脚本实时统计数据
+func (s *Statistics) ScriptRealtime(ctx context.Context, req *api.ScriptRealtimeRequest) (*api.ScriptRealtimeResponse, error) {
+	return statistics_svc.Statistics().ScriptRealtime(ctx, req)
+}
